Updated all files for both GUI and CLI